fix namespace and text-align

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -20,7 +20,6 @@ time, mark, audio, video {
     border: 0;
     font-size: 100%;
     font: inherit;
-    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -103,13 +102,13 @@ table tr td.checkSilenced {
     border-left: 1px solid #e3e3e3;
 }
 .event_warning {
-    background: #FF7600; 
+    background: #ffb744;
 }
 .event_critical {
     background: #ed1f28;
 }
 .event_none {
-    background: #00C2CB; 
+    background: #00b7bf;
 }
 .event_silenced {
   background: #00E30F; 
